crates/swc_ecma_parser/tests/test262-error-references/fail/e4b42b8e20501fcc.js.stderr
error: Unexpected token `,`. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/e4b42b8e20501fcc.js:1:3
  |
1 | ({,a,} = 0)
  |   ^

